<resources>
    <string name="app_name">Ansopedia</string>
    <string name="__p__sign_in_string">SIGN IN</string>
    <string name="__p__sign_up_string">SIGN UP</string>

    <string name="golddesc">If you got the gold medal then you are Advanced in the following program and course.</string>
    <string name="silverdesc">If you got the Silver level then you are the Intermediate in the following program and course.</string>
    <string name="bronzedesc">If you got the Bronze level then you are a beginner in the following program and course</string>

    <string name="inactive_golddesc">If you got the gold medal then you are Advanced in the following program and course.</string>
    <string name="inactive_silverdesc">If you got the Silver level then you are the Intermediate in the following program and course.</string>
    <string name="inactive_bronzedesc">If you got the Bronze level then you are a beginner in the following program and course</string>


    <string name="navigation_open">Open Navigation drawer</string>
    <string name="navigation_close">Close Navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
<!--    Google client verification-->
<!--    <string name="default_web_client_id" translatable="false">290159073203-gur9nfep5rinng7l0kci73b9trglgdfo.apps.googleusercontent.com</string>-->
<!--    <string name="gcm_defaultSenderId" translatable="false">290159073203</string>-->
<!--    <string name="google_api_key" translatable="false">AIzaSyAanew-KAsupaZsosSkM-c8AIM1ggclE_k</string>-->
<!--    <string name="google_app_id" translatable="false">1:290159073203:android:d9b907969334eccc4b9dc6</string>-->
<!--    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyAanew-KAsupaZsosSkM-c8AIM1ggclE_k</string>-->
<!--    <string name="google_storage_bucket" translatable="false">ansopedia-aeb06.appspot.com</string>-->
<!--    <string name="project_id" translatable="false">ansopedia-aeb06</string>-->
</resources>