<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".BadgesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/material_bg">

        <ImageView
            android:id="@+id/ivBackButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="13dp"
            android:translationZ="90dp"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />

        <RelativeLayout
            android:id="@+id/rlTopic"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/chapter_background">

            <TextView
                android:id="@+id/tvSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/syne_bold"
                android:gravity="center"
                android:text="About Badges"
                android:textColor="@color/white"
                android:textSize="24dp" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/topLeads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlTopic"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingHorizontal="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bg_badges"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="10dp"
                    android:src="@drawable/gold_badge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/golddesc"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bg_badges"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="10dp"
                    android:src="@drawable/inactive_gold_badge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inactive_golddesc"
                    android:textAlignment="center" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bg_badges"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="10dp"
                    android:src="@drawable/silver_badge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/silverdesc"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bg_badges"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="10dp"
                    android:src="@drawable/inactive_silver_badge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inactive_silverdesc"
                    android:textAlignment="center" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_badges"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="10dp"
                    android:src="@drawable/bronze_badge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bronzedesc"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bg_badges"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="10dp"
                    android:src="@drawable/inactive_bronze_badge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inactive_bronzedesc"
                    android:textAlignment="center" />
            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>

</ScrollView>